# file-copy-shared-memory

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.bat  vcpkg.json
include/: buffer.hpp  config.hpp  consumer.hpp  copy_file.hpp  exception.hpp  logger.hpp  producer.hpp  shared_memory.hpp  status.hpp
